--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,78 @@
-node_modules
-dist
-.DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
-.next
-.history
-venv
-.history
-node_modules
-dist
-.DS_Store
-server/public
-vite.config.ts.*
-*.tar.gz
+# Dependencies
+node_modules/
 venv/
 env/
 .venv/
 .env/
+
+# Build outputs
+dist/
+build/
+.next/
+
+# Environment files
 .env
 .env.local
-.claude
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Logs
+*.log
+logs/
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# OS files
+.DS_Store
+.DS_Store?
+._*
+Thumbs.db
+ehthumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# History and temp files
+.history/
+.local/
+.claude/
 .config.local
 .replit
-*.log
+
+# Docker
+.dockerignore
+
+# Deployment (keep these in repo but exclude sensitive overrides)
+docker-compose.override.yml
+.env.production
+
+# Archives
+*.tar.gz
+*.zip
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+.Python
+.pytest_cache/
+.coverage
+.mypy_cache/
+
+# Node.js
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Temporary files
+*.tmp
+*.temp
+vite.config.ts.*
