--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY frontend/package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production
+RUN npm ci
 
 # Copy source code
 COPY frontend/ ./
@@ -28,7 +28,6 @@ RUN npm ci --only=production && npm cache clean --force
 
 # Copy built application from builder stage
 COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/client ./client
 
 # Create non-root user
 RUN addgroup -g 1001 -S nodejs
