--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,6 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres}"]
       interval: 30s
@@ -26,7 +24,7 @@ services:
     environment:
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
-      - DEEPSEEK_BASE_URL=${DEEPSEEK_BASE_URL}
+      - DEEPSEEK_BASE_URL=${DEEPSEEK_BASE_URL:-https://api.deepseek.com/v1}
       - DB_HOST=postgres
       - DB_NAME=${DB_NAME:-reddit_leads}
       - DB_USER=${DB_USER:-postgres}
@@ -34,16 +32,13 @@ services:
       - DB_PORT=5432
       - DATABASE_URL=postgresql://${DB_USER:-postgres}:${DB_PASSWORD:-password}@postgres:5432/${DB_NAME:-reddit_leads}
       - BACKEND_PORT=8001
-      - FRONTEND_PORT=3000
-      - BACKEND_URL=http://backend:8001
-      - FRONTEND_URL=http://frontend:3000
-      - REDDIT_CLIENT_ID=${REDDIT_CLIENT_ID}
-      - REDDIT_CLIENT_SECRET=${REDDIT_CLIENT_SECRET}
-      - REDDIT_USER_AGENT=${REDDIT_USER_AGENT}
-      - OPENROUTER_KEY=${OPENROUTER_KEY}
+      - REDDIT_CLIENT_ID=${REDDIT_CLIENT_ID:-}
+      - REDDIT_CLIENT_SECRET=${REDDIT_CLIENT_SECRET:-}
+      - REDDIT_USER_AGENT=${REDDIT_USER_AGENT:-Chrome}
+      - OPENROUTER_KEY=${OPENROUTER_KEY:-}
       - SCRAPING_INTERVAL_MINUTES=${SCRAPING_INTERVAL_MINUTES:-120}
-    ports:
-      - "8001:8001"
+    expose:
+      - "8001"
     depends_on:
       postgres:
         condition: service_healthy
@@ -53,7 +48,7 @@ services:
       timeout: 10s
       retries: 3
 
-  # Background Service for Scraping
+  # Background Service for Reddit Scraping
   background:
     build:
       context: .
@@ -62,7 +57,7 @@ services:
     environment:
       - ANTHROPIC_API_KEY=${ANTHROPIC_API_KEY}
       - DEEPSEEK_API_KEY=${DEEPSEEK_API_KEY}
-      - DEEPSEEK_BASE_URL=${DEEPSEEK_BASE_URL}
+      - DEEPSEEK_BASE_URL=${DEEPSEEK_BASE_URL:-https://api.deepseek.com/v1}
       - DB_HOST=postgres
       - DB_NAME=${DB_NAME:-reddit_leads}
       - DB_USER=${DB_USER:-postgres}
@@ -75,8 +70,9 @@ services:
         condition: service_healthy
       backend:
         condition: service_healthy
+    restart: unless-stopped
 
-  # Frontend
+  # Frontend Web Application
   frontend:
     build:
       context: .
@@ -88,6 +84,7 @@ services:
       - "3000:3000"
     depends_on:
       - backend
+    restart: unless-stopped
 
 volumes:
   postgres_data:
