--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,7 +46,8 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
       interval: 30s
       timeout: 10s
-      retries: 3
+      retries: 5
+      start_period: 60s
 
   # Background Service for Reddit Scraping
   background:
