fix(deployment): Resolve frontend build and deployment configuration issues
- Update Dockerfile.frontend to install all dependencies, including dev dependencies
- Modify frontend/server/vite.ts to use dynamic imports for Vite-related modules
- Add comprehensive DEPLOYMENT_FIXES_SUMMARY.md documentation for deployment troubleshooting
- Improve build process to ensure correct static asset generation and server configuration
- Remove hardcoded import statements to enhance flexibility and reduce build complexity
Deployment fixes address multiple issues with Docker, Vite, and frontend build process to ensure smoother deployment on Coolify platform.

--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -23,8 +23,8 @@ WORKDIR /app
 # Copy package files
 COPY frontend/package*.json ./
 
-# Install only production dependencies
-RUN npm ci --only=production && npm cache clean --force
+# Install all dependencies (vite is needed for dynamic imports in production)
+RUN npm ci && npm cache clean --force
 
 # Copy built application from builder stage
 COPY --from=builder /app/dist ./dist
