--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,6 +37,8 @@ services:
       - REDDIT_USER_AGENT=${REDDIT_USER_AGENT:-Chrome}
       - OPENROUTER_KEY=${OPENROUTER_KEY:-}
       - SCRAPING_INTERVAL_MINUTES=${SCRAPING_INTERVAL_MINUTES:-120}
+      - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
+      - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
     expose:
       - "6070"
     depends_on:
@@ -82,6 +84,8 @@ services:
       - NODE_ENV=production
       - PORT=3050
       - VITE_API_URL=http://backend:6070
+      - VITE_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL}
+      - VITE_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY}
     ports:
       - "3050:3050"
     depends_on:
