refactor(deployment): Improve Docker and frontend deployment configurations
- Update Dockerfiles for backend and frontend to enhance build process
- Add environment file copying to Docker builds for better configuration
- Modify docker-compose.yaml to include restart policy for backend service
- Implement debug endpoint in frontend routes for environment variable inspection
- Update npm install strategies for better dependency management
- Add documentation for sidebar logout update and user information display
- Enhance route proxy mechanisms with improved logging and error handling
Resolves configuration and deployment consistency issues across frontend and backend services

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -17,6 +17,9 @@ RUN pip install --no-cache-dir -r server/requirements.txt
 # Copy server code
 COPY server/ /app/server/
 
+# Copy environment file if it exists
+COPY server/.env* /app/server/
+
 # Create logs directory
 RUN mkdir -p /app/logs
 
