--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,57 +1,22 @@
-FROM node:20-alpine AS builder
+FROM node:20-alpine
 
 # Set working directory
 WORKDIR /app
 
-# Copy package files
+# Install dependencies first for better caching
 COPY frontend/package*.json ./
-
-# Install all dependencies (including dev dependencies for build)
-# Use npm install instead of npm ci for better compatibility
-RUN npm install --frozen-lockfile || npm install
+RUN npm install
 
 # Copy source code
 COPY frontend/ ./
 
-# Copy environment file if it exists
-COPY frontend/.env* ./
-
-# Build the application (this creates dist/ and public/ directories)
+# Build the application
 RUN npm run build
-
-# Production stage
-FROM node:20-alpine AS production
-
-WORKDIR /app
-
-# Copy package files
-COPY frontend/package*.json ./
-
-# Install all dependencies (vite is needed for dynamic imports in production)
-RUN npm install --production --frozen-lockfile || npm install --production
-
-# Copy built application from builder stage
-COPY --from=builder /app/dist ./dist
-
-# Copy the built client assets to where the server expects them
-RUN mkdir -p server && cp -r dist/public server/public
-
-# Create non-root user
-RUN addgroup -g 1001 -S nodejs
-RUN adduser -S nextjs -u 1001
-
-# Change ownership of the app directory
-RUN chown -R nextjs:nodejs /app
-USER nextjs
 
 # Expose port
 EXPOSE 3050
 
-# Health check
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:3050 || exit 1
-
-# Set environment variable
+# Set environment variables
 ENV NODE_ENV=production
 ENV PORT=3050
 
