feat(api): Add scraper status and business AI settings endpoints
- Implement `/api/scraper/status` endpoint to retrieve background scraping service status
- Add new `/api/businesses/{business_id}/ai-settings` GET and PUT endpoints
- Enhance logging for business retrieval with informative log messages
- Update dashboard query to use PostgreSQL-compatible date interval syntax
- Improve error handling and status reporting for new endpoints
- Prepare infrastructure for future AI configuration management

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -95,17 +95,17 @@ services:
       - backend
     restart: unless-stopped
 
-  # Nginx Reverse Proxy (Optional - for production)
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - frontend
-      - backend
-    restart: unless-stopped
+  # Nginx Reverse Proxy (Disabled - port 80 conflict)
+  # nginx:
+  #   image: nginx:alpine
+  #   ports:
+  #     - "80:80"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf:ro
+  #   depends_on:
+  #     - frontend
+  #     - backend
+  #   restart: unless-stopped
 
 volumes:
   postgres_data:
