feat(deployment): Implement Gunicorn for production API server
- Add Gunicorn configuration file for production deployment
- Create production startup script with database connection check
- Update Dockerfile.backend to use new production startup script
- Modify docker-compose.yaml to set additional environment variables
- Update api_server.py to clarify development vs production modes
- Add Gunicorn to server requirements
- Improve server startup logging and error handling
- Optimize worker processes and connection management
Enhances server deployment by introducing a robust production-ready server configuration with Gunicorn, improving performance, logging, and startup reliability.

--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -30,5 +30,8 @@ EXPOSE 6070
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:6070/health || exit 1
 
-# Default command
-CMD ["python3", "/app/server/api_server.py"]
+# Make startup script executable
+RUN chmod +x /app/server/start_production.py
+
+# Default command - use Gunicorn for production
+CMD ["python3", "/app/server/start_production.py"]
